charts/1.0.0/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
spec:
  type: ClusterIP
  ports:
    - port: 80
      name: jenkins
      targetPort: 8080
    - port: 50000
      name: jenkins-jnlp
      targetPort: 50000
  selector:
    app: jenkins
